--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "handlebars": "^4.0.11",
     "material-ui": "^0.19.4",
     "react": "^16.1.0",
-    "react-dom": "^16.1.0",
+    "react-dom": "^16.1.1",
+    "react-dragula": "^1.1.17",
     "react-easy-transition": "^1.2.6",
     "react-router-bootstrap": "^0.24.4",
     "react-router-dom": "^4.2.2",
